--- a/second/configs/nuscenes/all.pp.largea.config
+++ b/second/configs/nuscenes/all.pp.largea.config
@@ -274,8 +274,8 @@ model: {
 train_input_reader: {
   dataset: {
     dataset_class_name: "NuScenesDataset"
-    kitti_info_path: "/media/yy/960evo/datasets/nuscene/v1.0-trainval/infos_train.pkl"
-    kitti_root_path: "/media/yy/960evo/datasets/nuscene/v1.0-trainval"
+    kitti_info_path: "/home/niko/Documents/nuscenes/v1.0-mini/infos_train.pkl"
+    kitti_root_path: "/home/niko/Documents/nuscenes/v1.0-mini"
   }
   
   batch_size: 3
@@ -301,7 +301,7 @@ train_input_reader: {
     random_flip_y: true
     remove_environment: false
     database_sampler {
-      database_info_path: "/media/yy/960evo/datasets/nuscene/v1.0-trainval/kitti_dbinfos_train.pkl"
+      database_info_path: "/home/niko/Documents/nuscenes/v1.0-mini/kitti_dbinfos_train.pkl"
       sample_groups {
         name_to_max_num {
           key: "bus"
@@ -354,8 +354,8 @@ train_config: {
 eval_input_reader: {
   dataset: {
     dataset_class_name: "NuScenesDataset"
-    kitti_info_path: "/media/yy/960evo/datasets/nuscene/v1.0-trainval/infos_val.pkl"
-    kitti_root_path: "/media/yy/960evo/datasets/nuscene/v1.0-trainval"
+    kitti_info_path: "/home/niko/Documents/nuscenes/v1.0-mini/infos_val.pkl"
+    kitti_root_path: "/home/niko/Documents/nuscenes/v1.0-mini"
   }
   batch_size: 1
   
