--- a/second/configs/nuscenes/all.pp.deprecated.config
+++ b/second/configs/nuscenes/all.pp.deprecated.config
@@ -1,9 +1,15 @@
 model: {
   second: {
+    network_class_name: "VoxelNet"
     voxel_generator {
-      point_cloud_range : [-49.6, -49.6, -5, 49.6, 49.6, 3]
-      voxel_size : [0.2, 0.2, 8]
-      max_number_of_points_per_voxel : 40
+      full_empty_part_with_mean: false
+      point_cloud_range : [-50, -50, -5, 50, 50, 3]
+      voxel_size : [0.25, 0.25, 0.2]
+      max_number_of_points_per_voxel : 60
+      block_filtering: false # filter voxels by block height
+      block_factor: 1 # height calc width: voxel_size * block_factor * block_size= (0.25 * 1 * 7)
+      block_size: 7
+      height_threshold: 0.2 # locations with height < height_threshold will be removed.
     }
     voxel_feature_extractor: {
       module_class_name: "PillarFeatureNetOld"
@@ -21,7 +27,7 @@ model: {
       layer_nums: [3, 5, 5]
       layer_strides: [2, 2, 2]
       num_filters: [64, 128, 256]
-      upsample_strides: [1, 2, 4]
+      upsample_strides: [0.5, 1, 2]
       num_upsample_filters: [128, 128, 128]
       use_groupnorm: false
       num_groups: 32
@@ -49,9 +55,12 @@ model: {
     use_sigmoid_score: true
     encode_background_as_zeros: true
     encode_rad_error_by_sin: true
+    sin_error_factor: 1.0
 
     use_direction_classifier: true
     direction_loss_weight: 0.2
+    num_direction_bins: 2
+    direction_limit_offset: 0
 
     # Loss
     pos_class_weight: 1.0
@@ -59,14 +68,9 @@ model: {
 
     loss_norm_type: NormByNumPositives
     # Postprocess
-    post_center_limit_range: [-59.6, -59.6, -6, 59.6, 59.6, 4]
-    use_rotate_nms: false
-    use_multi_class_nms: false
-    nms_pre_max_size: 1000
-    nms_post_max_size: 300
-    nms_score_threshold: 0.05
-    nms_iou_threshold: 0.5
+    post_center_limit_range: [-59.6, -59.6, -10, 59.6, 59.6, 10]
 
+    nms_class_agnostic: false # only valid in multi-class nms
     box_coder: {
       ground_box3d_coder: {
         linear_dim: false
@@ -74,148 +78,227 @@ model: {
       }
     }
     target_assigner: {
-      anchor_generators: {
+      class_settings: {
+        class_name: "car"
         anchor_generator_range: {
           sizes: [1.95017717, 4.60718145, 1.72270761] # wlh
-          anchor_ranges: [-49.6, -49.6, -0.93897414, 49.6, 49.6, -0.93897414]
+          anchor_ranges: [-50, -50, -0.93897414, 50, 50, -0.93897414]
           rotations: [0, 1.57] # DON'T modify this unless you are very familiar with my code.
-          matched_threshold : 0.6
-          unmatched_threshold : 0.45
-          class_name: "car"
+          # custom_values: [0, 0] # velocity vector base value
         }
+        matched_threshold : 0.25
+        unmatched_threshold : 0.2
+        use_rotate_nms: false
+        use_multi_class_nms: false
+        nms_pre_max_size: 1000
+        nms_post_max_size: 300
+        nms_score_threshold: 0.05
+        nms_iou_threshold: 0.5
         region_similarity_calculator: {
-          nearest_iou_similarity: {
-          }
+          nearest_iou_similarity: {}
         }
       }
-      anchor_generators: {
+      class_settings: {
+        class_name: "bicycle"
         anchor_generator_range: {
           sizes: [0.60058911, 1.68452161, 1.27192197] # wlh
-          anchor_ranges: [-49.6, -49.6, -1.03743013, 49.6, 49.6, -1.03743013]
+          anchor_ranges: [-50, -50, -1.03743013, 50, 50, -1.03743013]
           rotations: [0, 1.57] # DON'T modify this unless you are very familiar with my code.
-          matched_threshold : 0.4
-          unmatched_threshold : 0.2
-          class_name: "bicycle"
+          # custom_values: [0, 0] # velocity vector base value
         }
+        matched_threshold : 0.2
+        unmatched_threshold : 0.15
+        use_rotate_nms: false
+        use_multi_class_nms: false
+        nms_pre_max_size: 1000
+        nms_post_max_size: 300
+        nms_score_threshold: 0.05
+        nms_iou_threshold: 0.5
         region_similarity_calculator: {
-          nearest_iou_similarity: {
-          }
+          nearest_iou_similarity: {}
         }
-
       }
-      anchor_generators: {
+      class_settings: {
+        class_name: "bus"
         anchor_generator_range: {
           sizes: [2.94046906, 11.1885991, 3.47030982] # wlh
-          anchor_ranges: [-49.6, -49.6, -0.0715754, 49.6, 49.6, -0.0715754]
+          anchor_ranges: [-50, -50, -0.0715754, 50, 50, -0.0715754]
           rotations: [0, 1.57] # DON'T modify this unless you are very familiar with my code.
-          matched_threshold : 0.7
-          unmatched_threshold : 0.4
-          class_name: "bus"
+          # custom_values: [0, 0] # velocity vector base value
         }
+        matched_threshold : 0.5
+        unmatched_threshold : 0.35
+        use_rotate_nms: false
+        use_multi_class_nms: false
+        nms_pre_max_size: 1000
+        nms_post_max_size: 300
+        nms_score_threshold: 0.05
+        nms_iou_threshold: 0.5
         region_similarity_calculator: {
-          nearest_iou_similarity: {
-          }
+          nearest_iou_similarity: {}
         }
-
       }
-      anchor_generators: {
+      class_settings: {
+        class_name: "construction_vehicle"
         anchor_generator_range: {
           sizes: [2.73050468, 6.38352896, 3.13312415] # wlh
-          anchor_ranges: [-49.6, -49.6, -0.08168083, 49.6, 49.6, -0.08168083]
+          anchor_ranges: [-50, -50, -0.08168083, 50, 50, -0.08168083]
           rotations: [0, 1.57] # DON'T modify this unless you are very familiar with my code.
-          matched_threshold : 0.6
-          unmatched_threshold : 0.45
-          class_name: "construction_vehicle"
+          # custom_values: [0, 0] # velocity vector base value
         }
+        matched_threshold : 0.4
+        unmatched_threshold : 0.3
+        use_rotate_nms: false
+        use_multi_class_nms: false
+        nms_pre_max_size: 1000
+        nms_post_max_size: 300
+        nms_score_threshold: 0.05
+        nms_iou_threshold: 0.5
         region_similarity_calculator: {
-          nearest_iou_similarity: {
-          }
+          nearest_iou_similarity: {}
         }
-
       }
-      anchor_generators: {
+      class_settings: {
+        class_name: "motorcycle"
         anchor_generator_range: {
           sizes: [0.76279481, 2.09973778, 1.44403034] # wlh
-          anchor_ranges: [-49.6, -49.6, -0.99194854, 49.6, 49.6, -0.99194854]
+          anchor_ranges: [-50, -50, -0.99194854, 50, 50, -0.99194854]
           rotations: [0, 1.57] # DON'T modify this unless you are very familiar with my code.
-          matched_threshold : 0.4
-          unmatched_threshold : 0.2
-          class_name: "motorcycle"
+          # custom_values: [0, 0] # velocity vector base value
         }
+        matched_threshold : 0.2
+        unmatched_threshold : 0.15
+        use_rotate_nms: false
+        use_multi_class_nms: false
+        nms_pre_max_size: 1000
+        nms_post_max_size: 300
+        nms_score_threshold: 0.05
+        nms_iou_threshold: 0.5
         region_similarity_calculator: {
-          nearest_iou_similarity: {
-          }
+          nearest_iou_similarity: {}
         }
-
       }
-      anchor_generators: {
+      class_settings: {
+        class_name: "pedestrian"
         anchor_generator_range: {
           sizes: [0.66344886, 0.7256437, 1.75748069] # wlh
-          anchor_ranges: [-49.6, -49.6, -0.73911038, 49.6, 49.6, -0.73911038]
-          rotations: [0, 1.57] # DON'T modify this unless you are very familiar with my code.
-          matched_threshold : 0.4
-          unmatched_threshold : 0.2
-          class_name: "pedestrian"
+          anchor_ranges: [-50, -50, -0.73911038, 50, 50, -0.73911038]
+          rotations: [0] # DON'T modify this unless you are very familiar with my code.
+          # custom_values: [0, 0] # velocity vector base value
         }
+        matched_threshold : 0.5
+        unmatched_threshold : 0.35
+        use_rotate_nms: false
+        use_multi_class_nms: false
+        nms_pre_max_size: 1000
+        nms_post_max_size: 300
+        nms_score_threshold: 0.05
+        nms_iou_threshold: 0.5
         region_similarity_calculator: {
-          nearest_iou_similarity: {
+          distance_similarity: {
+            distance_norm: 1.414 # match range
+            with_rotation: false
+            rotation_alpha: 0.0 # rot error contribution
           }
         }
-
       }
-      anchor_generators: {
+      class_settings: {
+        class_name: "traffic_cone"
         anchor_generator_range: {
           sizes: [0.39694519, 0.40359262, 1.06232151] # wlh
-          anchor_ranges: [-49.6, -49.6, -1.27868911, 49.6, 49.6, -1.27868911]
-          rotations: [0, 1.57] # DON'T modify this unless you are very familiar with my code.
-          matched_threshold : 0.3
-          unmatched_threshold : 0.15
-          class_name: "traffic_cone"
+          anchor_ranges: [-50, -50, -1.27868911, 50, 50, -1.27868911]
+          rotations: [0] # DON'T modify this unless you are very familiar with my code.
+          # custom_values: [0, 0] # velocity vector base value
         }
+        matched_threshold : 0.5
+        unmatched_threshold : 0.35
+        use_rotate_nms: false
+        use_multi_class_nms: false
+        nms_pre_max_size: 1000
+        nms_post_max_size: 300
+        nms_score_threshold: 0.05
+        nms_iou_threshold: 0.5
         region_similarity_calculator: {
-          nearest_iou_similarity: {
+          distance_similarity: {
+            distance_norm: 1.414 # match range
+            with_rotation: false
+            rotation_alpha: 0.0 # rot error contribution
           }
         }
       }
-      anchor_generators: {
+      class_settings: {
+        class_name: "trailer"
         anchor_generator_range: {
-          sizes: [2.87427237, 12.01320693, 3.81509561] # wlh
-          anchor_ranges: [-49.6, -49.6, 0.22228277, 49.6, 49.6, 0.22228277]
+          # sizes: [2.87427237, 12.01320693, 3.81509561] # wlh
+          sizes: [3, 15, 3.8, 2, 3, 3.8]
+          anchor_ranges: [-50, -50, 0.22228277, 50, 50, 0.22228277]
           rotations: [0, 1.57] # DON'T modify this unless you are very familiar with my code.
-          matched_threshold : 0.6
-          unmatched_threshold : 0.45
-          class_name: "trailer"
+          # custom_values: [0, 0] # velocity vector base value
         }
+        matched_threshold : 0.5
+        unmatched_threshold : 0.35
+        use_rotate_nms: false
+        use_multi_class_nms: false
+        nms_pre_max_size: 1000
+        nms_post_max_size: 300
+        nms_score_threshold: 0.05
+        nms_iou_threshold: 0.5
         region_similarity_calculator: {
-          nearest_iou_similarity: {
-          }
+          nearest_iou_similarity: {}
         }
       }
-      anchor_generators: {
+      class_settings: {
+        class_name: "truck"
         anchor_generator_range: {
           sizes: [2.4560939, 6.73778078, 2.73004906] # wlh
-          anchor_ranges: [-49.6, -49.6, -0.37937912, 49.6, 49.6, -0.37937912]
+          anchor_ranges: [-50, -50, -0.37937912, 50, 50, -0.37937912]
           rotations: [0, 1.57] # DON'T modify this unless you are very familiar with my code.
-          matched_threshold : 0.6
-          unmatched_threshold : 0.45
-          class_name: "truck"
+          # custom_values: [0, 0] # velocity vector base value
         }
+        matched_threshold : 0.5
+        unmatched_threshold : 0.35
+        use_rotate_nms: false
+        use_multi_class_nms: false
+        nms_pre_max_size: 1000
+        nms_post_max_size: 300
+        nms_score_threshold: 0.05
+        nms_iou_threshold: 0.5
         region_similarity_calculator: {
-          nearest_iou_similarity: {
-          }
+          nearest_iou_similarity: {}
+        }
+      }
+      class_settings: {
+        class_name: "barrier"
+        anchor_generator_range: {
+          sizes: [2.49008838, 0.48578221, 0.98297065] # wlh
+          anchor_ranges: [-50, -50, -1.27247968, 50, 50, -1.27247968]
+          rotations: [0, 1.57] # DON'T modify this unless you are very familiar with my code.
+          # custom_values: [0, 0] # velocity vector base value
+        }
+        matched_threshold : 0.3
+        unmatched_threshold : 0.2
+        use_rotate_nms: false
+        use_multi_class_nms: false
+        nms_pre_max_size: 1000
+        nms_post_max_size: 300
+        nms_score_threshold: 0.05
+        nms_iou_threshold: 0.5
+        region_similarity_calculator: {
+          nearest_iou_similarity: {}
         }
       }
       sample_positive_fraction : -1
       sample_size : 512
+      assign_per_class: true
     }
   }
 }
 
 train_input_reader: {
   dataset: {
-    dataset_class_name: "NuScenesDatasetD8"
-    kitti_info_path: "/home/niko/Documents/nuscenes/v1.0-mini/infos_train.pkl"
-    kitti_root_path: "/home/niko/Documents/nuscenes/v1.0-mini"
+    dataset_class_name: "NuScenesDataset"
+    kitti_info_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes/v1.0-trainval/nuscenes_infos_1sweeps_train.pkl"
+    kitti_root_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes"
   }
   
   batch_size: 3
@@ -239,6 +322,7 @@ train_input_reader: {
     remove_unknown_examples: false
     remove_environment: false
     database_sampler {
+        database_info_path: "nuscenes_dbinfos_1sweeps_withvelo.pkl"
     }
   }
 }
@@ -271,15 +355,15 @@ train_config: {
 eval_input_reader: {
   dataset: {
     dataset_class_name: "NuScenesDataset"
-    kitti_info_path: "/home/niko/Documents/nuscenes/v1.0-mini/infos_val.pkl"
-    kitti_root_path: "/home/niko/Documents/nuscenes/v1.0-mini"
+    kitti_info_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes/v1.0-trainval/nuscenes_infos_1sweeps_val.pkl"
+    kitti_root_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes"
   }
   batch_size: 1
   
   preprocess: {
     max_number_of_voxels: 40000
     shuffle_points: false
-    num_workers: 3
+    num_workers: 4
     anchor_area_threshold: -1
     remove_environment: false
   }
