--- a/second/configs/nuscenes/all.fhd.config
+++ b/second/configs/nuscenes/all.fhd.config
@@ -300,8 +300,8 @@ model: {
 train_input_reader: {
   dataset: {
     dataset_class_name: "NuScenesDatasetD2"
-    kitti_info_path: "/home/niko/Documents/nuscenes/v1.0-mini/infos_train.pkl"
-    kitti_root_path: "/home/niko/Documents/nuscenes/v1.0-mini"
+    kitti_info_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes/v1.0-trainval/nuscenes_infos_1sweeps_train.pkl"
+    kitti_root_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes"
   }
   
   batch_size: 3
@@ -327,7 +327,7 @@ train_input_reader: {
     random_flip_y: true
     remove_environment: false
     database_sampler {
-      database_info_path: "/home/niko/Documents/nuscenes/v1.0-mini/kitti_dbinfos_train.pkl"
+      database_info_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes/v1.0-trainval/nuscenes_dbinfos_1sweeps_withvelo.pkl"
       sample_groups {
         name_to_max_num {
           key: "bus"
@@ -380,8 +380,8 @@ train_config: {
 eval_input_reader: {
   dataset: {
     dataset_class_name: "NuScenesDataset"
-    kitti_info_path: "/home/niko/Documents/nuscenes/v1.0-mini/infos_val.pkl"
-    kitti_root_path: "/home/niko/Documents/nuscenes/v1.0-mini"
+    kitti_info_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes/v1.0-trainval/nuscenes_infos_1sweeps_val.pkl"
+    kitti_root_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes/v1.0-trainval"
   }
   batch_size: 1
   preprocess: {
