changed to test

--- a/second/configs/nuscenes/all.pp.deprecated.config
+++ b/second/configs/nuscenes/all.pp.deprecated.config
@@ -5,7 +5,8 @@ model: {
       full_empty_part_with_mean: false
       point_cloud_range : [-50, -50, -10, 50, 50, 10]
       voxel_size : [0.25, 0.25, 0.2]
-      max_number_of_points_per_voxel : 60
+      max_number_of_points_per_voxel : 160
+      # num_point_features : 4
       block_filtering: false # filter voxels by block height
       block_factor: 1 # height calc width: voxel_size * block_factor * block_size= (0.25 * 1 * 7)
       block_size: 7
