--- a/second/configs/nuscenes/all.pp.lowa.config
+++ b/second/configs/nuscenes/all.pp.lowa.config
@@ -3,8 +3,8 @@ model: {
     network_class_name: "VoxelNet"
     voxel_generator {
       point_cloud_range : [-50, -50, -10, 50, 50, 10]
-      voxel_size : [0.25, 0.25, 20]
-      max_number_of_points_per_voxel : 60
+      voxel_size : [0.25, 0.25, 0.2]
+      max_number_of_points_per_voxel : 160
     }
     voxel_feature_extractor: {
       module_class_name: "PillarFeatureNet"
@@ -292,15 +292,15 @@ model: {
 train_input_reader: {
   dataset: {
     dataset_class_name: "NuScenesDataset"
-    kitti_info_path: "/home/niko/Documents/nuscenes/v1.0-mini/infos_train.pkl"
-    kitti_root_path: "/home/niko/Documents/nuscenes/v1.0-mini"
+    kitti_info_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes/v1.0-trainval/nuscenes_infos_1sweeps_train.pkl"
+    kitti_root_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes"
   }
   
   batch_size: 3
   preprocess: {
-    max_number_of_voxels: 25000
+    max_number_of_voxels: 30000
     shuffle_points: false
-    num_workers: 3
+    num_workers: 4
     groundtruth_localization_noise_std: [0, 0, 0]
     groundtruth_rotation_uniform_noise: [0, 0]
     # groundtruth_localization_noise_std: [0.25, 0.25, 0.25]
@@ -315,29 +315,29 @@ train_input_reader: {
     groundtruth_drop_max_keep_points: 15
     remove_unknown_examples: false
     sample_importance: 1.0
-    random_flip_x: true
-    random_flip_y: true
+    random_flip_x: false
+    random_flip_y: false
     remove_environment: false
     database_sampler {
-      database_info_path: "/home/niko/Documents/nuscenes/v1.0-mini/kitti_dbinfos_train.pkl"
-      sample_groups {
-        name_to_max_num {
-          key: "bus"
-          value: 4
-        }
-      }
-      sample_groups {
-        name_to_max_num {
-          key: "trailer"
-          value: 4
-        }
-      }
-      sample_groups {
-        name_to_max_num {
-          key: "truck"
-          value: 4
-        }
-      }
+      database_info_path: "nuscenes_dbinfos_1sweeps_withvelo.pkl"
+#      sample_groups {
+#        name_to_max_num {
+#          key: "bus"
+#          value: 4
+#        }
+#      }
+#      sample_groups {
+#        name_to_max_num {
+#          key: "trailer"
+#          value: 4
+#        }
+#      }
+#      sample_groups {
+#        name_to_max_num {
+#          key: "truck"
+#          value: 4
+#        }
+#      }
       global_random_rotation_range_per_object: [0, 0]
       rate: 1.0
     }
@@ -372,15 +372,15 @@ train_config: {
 eval_input_reader: {
   dataset: {
     dataset_class_name: "NuScenesDataset"
-    kitti_info_path: "/home/niko/Documents/nuscenes/v1.0-mini/infos_val.pkl"
-    kitti_root_path: "/home/niko/Documents/nuscenes/v1.0-mini"
+    kitti_info_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes/v1.0-trainval/nuscenes_infos_1sweeps_val.pkl"
+    kitti_root_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes"
   }
   batch_size: 1
   
   preprocess: {
-    max_number_of_voxels: 30000
+    max_number_of_voxels: 40000
     shuffle_points: false
-    num_workers: 2
+    num_workers: 4
     anchor_area_threshold: -1
     remove_environment: false
   }
