--- a/second/configs/nuscenes/all.fhd.config
+++ b/second/configs/nuscenes/all.fhd.config
@@ -3,9 +3,9 @@ model: {
     network_class_name: "VoxelNet"
     voxel_generator {
       full_empty_part_with_mean: false
-      point_cloud_range : [-49.6, -49.6, -5, 49.6, 49.6, 3]
+      point_cloud_range : [-50, -50, -10, 50, 50, 10]
       voxel_size : [0.05, 0.05, 0.2]
-      max_number_of_points_per_voxel : 1
+      max_number_of_points_per_voxel : 45
       block_filtering: true # filter voxels by block height
       block_factor: 1 # height calc width: voxel_size * block_factor * block_size= (0.05 * 1 * 8) 
       block_size: 8
@@ -15,14 +15,14 @@ model: {
       module_class_name: "SimpleVoxel"
       num_filters: [16]
       with_distance: false
-      num_input_features: 4
+      num_input_features: 3
     }
     middle_feature_extractor: {
       module_class_name: "SpMiddleFHD"
       # num_filters_down1: [] # protobuf don't support empty list.
       # num_filters_down2: []
       downsample_factor: 8
-      num_input_features: 4
+      num_input_features: 3
     }
     rpn: {
       module_class_name: "RPNV2"
@@ -327,25 +327,7 @@ train_input_reader: {
     random_flip_y: true
     remove_environment: false
     database_sampler {
-      database_info_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes/v1.0-trainval/nuscenes_dbinfos_1sweeps_withvelo.pkl"
-      sample_groups {
-        name_to_max_num {
-          key: "bus"
-          value: 4
-        }
-      }
-      sample_groups {
-        name_to_max_num {
-          key: "trailer"
-          value: 4
-        }
-      }
-      sample_groups {
-        name_to_max_num {
-          key: "truck"
-          value: 4
-        }
-      }
+      database_info_path: "nuscenes_dbinfos_1sweeps_withvelo.pkl"
       global_random_rotation_range_per_object: [0, 0]
       rate: 1.0
     }
