--- a/second/configs/nuscenes/all.fhd.config
+++ b/second/configs/nuscenes/all.fhd.config
@@ -4,16 +4,17 @@ model: {
     voxel_generator {
       full_empty_part_with_mean: false
       point_cloud_range : [-50, -50, -10, 50, 50, 10]
-      voxel_size : [0.05, 0.05, 0.2]
+      voxel_size : [0.05, 0.05, 0.05]
       max_number_of_points_per_voxel : 45
       block_filtering: true # filter voxels by block height
       block_factor: 1 # height calc width: voxel_size * block_factor * block_size= (0.05 * 1 * 8) 
       block_size: 8
       height_threshold: 0.2 # locations with height < height_threshold will be removed.
     }
+    # used in voxel_encoder.py
     voxel_feature_extractor: {
-      module_class_name: "SimpleVoxel"
-      num_filters: [16]
+      module_class_name: "VoxelFeatureExtractor"
+      num_filters: [32, 128]
       with_distance: false
       num_input_features: 3
     }
@@ -33,7 +34,7 @@ model: {
       num_upsample_filters: [128]
       use_groupnorm: false
       num_groups: 32
-      num_input_features: 128
+      num_input_features: 64
     }
     loss: {
       classification_loss: {
@@ -299,7 +300,7 @@ model: {
 
 train_input_reader: {
   dataset: {
-    dataset_class_name: "NuScenesDatasetD2"
+    dataset_class_name: "NuScenesDatasetD7"
     kitti_info_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes/v1.0-trainval/nuscenes_infos_1sweeps_train.pkl"
     kitti_root_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes"
   }
@@ -361,7 +362,7 @@ train_config: {
 
 eval_input_reader: {
   dataset: {
-    dataset_class_name: "NuScenesDataset"
+    dataset_class_name: "NuScenesDatasetD7"
     kitti_info_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes/v1.0-trainval/nuscenes_infos_1sweeps_val.pkl"
     kitti_root_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes/v1.0-trainval"
   }
