--- a/second/configs/nuscenes/all.fhd.config
+++ b/second/configs/nuscenes/all.fhd.config
@@ -3,9 +3,9 @@ model: {
     network_class_name: "VoxelNet"
     voxel_generator {
       full_empty_part_with_mean: false
-      point_cloud_range : [-50, -50, -10, 50, 50, 10]
-      voxel_size : [0.05, 0.05, 0.05]
-      max_number_of_points_per_voxel : 45
+      point_cloud_range : [-50, -50, -5, 50, 50, 5]
+      voxel_size : [0.05, 0.05, 0.2]
+      max_number_of_points_per_voxel : 10 # 45
       block_filtering: true # filter voxels by block height
       block_factor: 1 # height calc width: voxel_size * block_factor * block_size= (0.05 * 1 * 8) 
       block_size: 8
@@ -14,24 +14,24 @@ model: {
     # used in voxel_encoder.py
     voxel_feature_extractor: {
       module_class_name: "VoxelFeatureExtractor"
-      num_filters: [32, 128]
+      num_filters: [16, 32]
       with_distance: false
       num_input_features: 3
     }
     middle_feature_extractor: {
-      module_class_name: "SpMiddleFHD"
-      # num_filters_down1: [] # protobuf don't support empty list.
-      # num_filters_down2: []
-      downsample_factor: 8
-      num_input_features: 3
+      module_class_name: "SparseMiddleExtractor"
+      # num_filters_down1: [16] # protobuf don't support empty list.
+      # num_filters_down2: [16,16]
+      downsample_factor: 4
+      num_input_features: 32
     }
     rpn: {
       module_class_name: "RPNV2"
       layer_nums: [5]
       layer_strides: [1]
-      num_filters: [128]
+      num_filters: [32]
       upsample_strides: [0.5] # will generate ~300k anchors.
-      num_upsample_filters: [128]
+      num_upsample_filters: [32]
       use_groupnorm: false
       num_groups: 32
       num_input_features: 64
@@ -305,7 +305,7 @@ train_input_reader: {
     kitti_root_path: "/media/NAS_lectures/00_deep_learning/Datasets/nuscenes"
   }
   
-  batch_size: 3
+  batch_size: 1
   preprocess: {
     max_number_of_voxels: 80000
     shuffle_points: false
